overflow fix

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -63,6 +63,7 @@ body {
   height: 100vh;
   min-width: 320px;
   margin: 0 auto;
+  overflow: scroll;
 }
 
 .home {
